[gd_scene load_steps=4 format=3 uid="uid://5prbtcy0lb1l"]

[ext_resource type="Script" uid="uid://bma73e2m2jysl" path="res://Codes/Uniques/Systems/Settings.gd" id="1_k4br1"]
[ext_resource type="Theme" uid="uid://d3mc6bsqrw6m6" path="res://RoundTheme.tres" id="2_wgwtj"]
[ext_resource type="Theme" uid="uid://ctuiv2s4xinn4" path="res://SharpBorderTheme.tres" id="3_87vk0"]

[node name="Settings" type="Control"]
layout_mode = 3
anchor_left = 0.15
anchor_top = 0.05
anchor_right = 0.85
anchor_bottom = 0.9
script = ExtResource("1_k4br1")

[node name="Background" type="Panel" parent="."]
modulate = Color(0.201527, 0.201527, 0.201527, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_wgwtj")

[node name="Settings" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Folder" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.85
anchor_right = 0.4
anchor_bottom = 0.95
offset_right = 8.0
offset_bottom = 8.0
text = "Open WorkNode Folder"

[node name="LeftVertical" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.4
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2

[node name="MouseSpeed" type="Control" parent="LeftVertical"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="RelativeSpeed" type="CheckBox" parent="LeftVertical/MouseSpeed"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_right = 35.0
offset_bottom = 35.0
button_pressed = true
alignment = 1
icon_alignment = 1

[node name="Text" type="Label" parent="LeftVertical/MouseSpeed"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Mouse speed relative to zoom : "
horizontal_alignment = 2
vertical_alignment = 1

[node name="ImageCompression" type="Control" parent="LeftVertical"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Compression" type="CheckBox" parent="LeftVertical/ImageCompression"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_right = 35.0
offset_bottom = 35.0
button_pressed = true
alignment = 1
icon_alignment = 1

[node name="Text" type="Label" parent="LeftVertical/ImageCompression"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Image compression : "
horizontal_alignment = 2
vertical_alignment = 1

[node name="RightVertical" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9

[node name="MainColor" type="Control" parent="RightVertical"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Color" type="LineEdit" parent="RightVertical/MainColor"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_right = 0.85
offset_bottom = 35.0
text = "#FFFFFF"
placeholder_text = "#FFFFFF"
max_length = 7
context_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="Color" type="ColorRect" parent="RightVertical/MainColor/Color"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = 40.0

[node name="Panel" type="Panel" parent="RightVertical/MainColor/Color/Color"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
theme = ExtResource("3_87vk0")

[node name="Label" type="Label" parent="RightVertical/MainColor"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
offset_bottom = 35.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Main Color :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SecondaryColor" type="Control" parent="RightVertical"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="SColor" type="LineEdit" parent="RightVertical/SecondaryColor"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_right = 0.85
offset_bottom = 35.0
text = "#FFFFFF"
placeholder_text = "#FFFFFF"
max_length = 7
context_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="Color" type="ColorRect" parent="RightVertical/SecondaryColor/SColor"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = 40.0

[node name="Panel" type="Panel" parent="RightVertical/SecondaryColor/SColor/Color"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
theme = ExtResource("3_87vk0")

[node name="Label" type="Label" parent="RightVertical/SecondaryColor"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
offset_bottom = 35.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Secondary Color :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BackgroundColor" type="Control" parent="RightVertical"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="BColor" type="LineEdit" parent="RightVertical/BackgroundColor"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_right = 0.85
offset_bottom = 35.0
text = "#FFFFFF"
placeholder_text = "#FFFFFF"
max_length = 7
context_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="Color" type="ColorRect" parent="RightVertical/BackgroundColor/BColor"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = 40.0

[node name="Panel" type="Panel" parent="RightVertical/BackgroundColor/BColor/Color"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
theme = ExtResource("3_87vk0")

[node name="Label" type="Label" parent="RightVertical/BackgroundColor"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
offset_bottom = 35.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Background Color :"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="Folder" to="." method="_on_folder_pressed"]
[connection signal="toggled" from="LeftVertical/MouseSpeed/RelativeSpeed" to="." method="_on_relative_speed_toggled"]
[connection signal="toggled" from="LeftVertical/ImageCompression/Compression" to="." method="_on_compression_toggled"]
[connection signal="text_changed" from="RightVertical/MainColor/Color" to="." method="_on_color_text_changed"]
[connection signal="text_changed" from="RightVertical/SecondaryColor/SColor" to="." method="_on_s_color_text_changed"]
[connection signal="text_changed" from="RightVertical/BackgroundColor/BColor" to="." method="_on_b_color_text_changed"]
